--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Mr Stevie</h1>
-							<p>Sound Design & Digital Audio Pro <a href="#first">Podcast Editing</a> / <a href="https://html5up.net">Sample Packs</a></p>
+							<p>Sound Design & Digital Audio Pro <a href="#first">Podcast Editing</a> / <a href="second">Sample Packs</a> / <a href="contact">Contact</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -44,7 +44,7 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+					<section id="second">
 						<header>
 							<h2>Feugiat consequat tempus ultrices</h2>
 						</header>
@@ -402,7 +402,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				-->
 
 				<!-- Section -->
-					<section>
+					<section id="contact">
 						<header>
 							<h2>Get in touch</h2>
 						</header>
