--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Mr Stevie</h1>
-							<p>Sound Design & Digital Audio Pro <a href="#first">Podcast Editing</a> / <a href="#second">Sample Packs</a> <a href="#contact">Contact</a></p>
+							<p>Sound Design & Digital Audio Pro<br> <a href="#first">Podcast&nbsp;Editing</a> / <a href="#second">Sample&nbsp;Packs<br> <a href="#contact">Contact</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
