--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>Podcast Editing</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Independent Podcasters require customisable editing services, curated to meet their needs</strong> Leaving you in control of the creation and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style. After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual converational to deeply precise.    </p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
