--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 							<h2>Podcast Editing</h2>
 						</header>
 						<div class="content">
-							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creation and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style. After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual converational to deeply precise. My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and full under a single pricing rate.<br>
+							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creation and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style. After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual converational to deeply precise. My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and fall under a single pricing rate.<br>
 
-							<strong>Pricing - $40 per hour</strong><br>Editing 1 hour of raw audio recording typically takes 2 hours of my time. With additional time required for severely bad audio, severe speech (stuttering etc) and additional guests (more than two voices) </p>
+							<strong>Pricing - $40 per hour</strong><br>Editing 1 hour of raw audio recording typically takes 2 hours of my time. With additional time required for severely bad audiorecordings, severe speech errors (stuttering etc) and additional guests (more than two voices).<br>Basic Video Podcast Editing is also available, as well as short-form clips for social media - Reels, TikTok, Shorts etc.<br><strong>CONTACT</strong> click here for more info!</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
