--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 							<p><strong>Pricing - $40aud per hour</strong><br>Editing 1 hour of raw audio recording typically takes 2 hours of my time. With additional time required for severely bad audio recordings, severe speech errors (stuttering etc) and additional guests (more than two voices).<br>Basic Video-Podcast editing is also available, as well as short-form clips for social media - Reels, TikTok, Shorts etc.<br>
 							<p><strong><u>CONTACT</u></strong> click here for more info!</p>
-							<p><span class="image main"><img src="images/Testimonial James.png"><span class="image main"><img src="images/Testimonial Hannah.png" alt="" /></span>
+							<p><span class="image main"><img src="images/Testimonial James.png"><span class="image main"><img src="images/Testimonial Hannah.png"><span class="image main"><img src="images/Testimonial Vin.png" alt="" /></span>
 						</div>
 					</section>
 
