--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creation and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style. After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual converational to deeply precise. My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and fall under a single pricing rate.<br>
 
 							<p><strong>Pricing - $40aud per hour</strong><br>Editing 1 hour of raw audio recording typically takes 2 hours of my time. With additional time required for severely bad audio recordings, severe speech errors (stuttering etc) and additional guests (more than two voices).<br>Basic Video-Podcast editing is also available, as well as short-form clips for social media - Reels, TikTok, Shorts etc.<br>
-							<p><a href="#contact"><strong>CONTACT</strong> click here for more info!</p>
+							<p><a href="#contact"><strong>CONTACT</strong> click here for more info!</a><p>
 							<p><span class="image main"><img src="images/Testimonial James.png" alt="Testimonial James"></span><span class="image main"><img src="images/Testimonial Hannah.png" alt="Testimonial Hannah"></span></p>
 
 						</div>
@@ -50,7 +50,7 @@
 				<!-- Section -->
 					<section id="second">
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Sample Packs</h2>
 						</header>
 						<div class="content">
 							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
