--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 							<h2>Sample Packs</h2>
 						</header>
 						<div class="content">
-							<p><strong>For Every Producer</strong> no matter what genre or style you create.<br>After 25 years of beatmaking, sound design, live performance and DJing - I've developed a taste for sounds that just work. You could say timeless. So i've recently started putting together some sample packs for you all to get busy with. Instant inspiration if you will.<br>There's some free mini-packs as well as larger premium versions.<br>High Quality, Royalty Free and 100% Original. Follow these links to get some goodness </p>
+							<p><strong>For Every Producer</strong> no matter what genre or style you create.<br>After 25 years of beatmaking, sound design, live performance and DJing - I've developed a taste for sounds that just work. You could say timeless. So i've recently started putting together some sample packs for you all to get busy with. Instant inspiration if you will.<br>There's some free mini-packs as well as larger premium versions.<br>High Quality, Royalty Free and 100% Original.<br>Follow these links to get the goodness... </p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
+								<li class="icon solid fa-tree"><strong>GUMROAD</strong> free and premium sample packs</li>
+								<li class="icon solid fa-tree"><strong>PATREON</strong> sample packs and optional subscription</li>
 								<li class="icon solid fa-signal">Libero nullam</li>
 								<li class="icon solid fa-cog">Blandit condimentum</li>
 								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
