--- a/index.html
+++ b/index.html
@@ -55,12 +55,9 @@
 						<div class="content">
 							<p><strong>For Every Producer</strong> no matter what genre or style you create.<br>After 25 years of beatmaking, sound design, live performance and DJing - I've developed a taste for sounds that just work. You could say timeless. So i've recently started putting together some sample packs for you all to get busy with. Instant inspiration if you will.<br>There's some free mini-packs as well as larger premium versions.<br>High Quality, Royalty Free and 100% Original.<br>Follow these links to get the goodness... </p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-tree"><strong>GUMROAD</strong> free and premium sample packs</li>
-								<li class="icon solid fa-tree"><strong>PATREON</strong> sample packs and optional subscription</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-tree">Nibh amet venenatis</li>
+								<li class="icon solid fa-tree"><strong>GUMROAD </strong> free and premium sample packs</li><br>
+								<li class="icon solid fa-tree"><strong>PATREON </strong> sample packs and optional subscription</li><br>
+								
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
