--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 						<div class="content">
 							<p><strong>For Every Producer</strong> no matter what genre or style you create.<br>After 25 years of beatmaking, sound design, live performance and DJing - I've developed a taste for sounds that just work. You could say timeless. So i've recently started putting together some sample packs for you all to get busy with. Instant inspiration if you will.<br>There's some free mini-packs as well as larger premium versions.<br>High Quality, Royalty Free and 100% Original.<br>Choose PATREON or GUMROAD below to get the goodness... </p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-tree"><a href="https://mrssstevie.gumroad.com/"><strong>GUMROAD</a></strong>&nbsp;&nbsp;free&nbsp;and&nbsp;premium&nbsp;sample&nbsp;packs</li><div>
-								<li class="icon solid fa-tree"style="margin-top: 30px;"><a href="https://www.patreon.com/MrStevie573"><strong>PATREON</a></strong>&nbsp;&nbsp;sample&nbsp;packs&nbsp;and&nbsp;optional&nbsp;subscription</li>
+								<li class="icon solid fa-tree"><a href="https://mrssstevie.gumroad.com/"target="_blank"><strong>GUMROAD</a></strong>&nbsp;&nbsp;-&nbsp;free&nbsp;and&nbsp;premium&nbsp;sample&nbsp;packs</li><div>
+								<li class="icon solid fa-tree"style="margin-top: 30px;"><a href="https://www.patreon.com/MrStevie573"target="_blank"><strong>PATREON</a></strong>&nbsp;&nbsp;-&nbsp;sample&nbsp;packs&nbsp;and&nbsp;optional&nbsp;subscription</li>
 								
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
