--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 
 							<!-- Section -->
-								<section class="hidden"> 
+								<section> 
 									<header>
 										<h3>Erat aliquam</h3>
 										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
@@ -88,7 +88,7 @@
 								</section>
 
 							<!-- Section -->
-								<section class="hidden">
+								<section>
 									<header>
 										<h3>Nisl consequat</h3>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
@@ -103,7 +103,7 @@
 								</section>
 
 							<!-- Section -->
-								<section class="hidden">
+								<section>
 									<header>
 										<h3>Lorem gravida</h3>
 										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
@@ -121,7 +121,7 @@
 					</section>
 
 				<!-- Section -->
-					<section class="hidden">
+					<section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
