--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+							<p><strong>Let's chat!</strong> Fill out the email form below, or reach out to me on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -361,7 +361,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#"></a>
 								</li>
 								<li>
 									<h3>Phone</h3>
