--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Let's chat!</strong> Fill out the email form below, or reach out to me on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
+							<p><strong>Let's chat! </strong> Fill out the email form below, or reach out to me on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -367,8 +367,8 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 										<li><a href="https://www.facebook.com/datackae"target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/stevie.au?igsh=Nm8waXJiaGNhcGM="target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.linkedin.com/in/steve-dearden-7a853b26"target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-patreon"><span class="label">Patreon</span></a></li>
-										<li><a href="#" class="icon brands fa-gumroad"><span class="label">Gumroad</span></a></li>
+										<li><a href="https://www.patreon.com/MrStevie573"target="_blank" class="icon brands fa-patreon"><span class="label">Patreon</span></a></li>
+										
 									</ul>
 								</li>
 							</ul>
