--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Mr Stevie</title>
+		<link rel="icon" type="image/x-icon" href="/images/MrS favicon 3.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -339,7 +340,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Let's chat! </strong> Fill out the email form below, or reach out to me on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
+							<p><strong>Let's chat! </strong>  Fill in the email form below, or reach out to me on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -376,7 +377,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Mr Stevie. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
