--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h2>Podcast Editing</h2>
 						</header>
 						<div class="content">
-							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creation and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style. After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual converational to deeply precise. My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and fall under a single pricing rate.<br>
+							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creation and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style.<br>After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual converational to deeply precise. My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and fall under a single pricing rate.<br>
 
 							<p><strong>Pricing - $40aud per hour</strong><br>Editing 1 hour of raw audio recording typically takes 2 hours of my time. With additional time required for severely bad audio recordings, severe speech errors (stuttering etc) and additional guests (more than two voices).<br>Basic Video-Podcast editing is also available, as well as short-form clips for social media - Reels, TikTok, Shorts etc.<br>
 							<p><a href="#contact"><strong>CONTACT</strong> click here for more info!</a><p>
@@ -340,7 +340,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Let's chat! </strong>  Fill in the email form below, or reach out to me on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
+							<p><strong>Let's chat! </strong>  Fill in the email form below, or reach out on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
