--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Mr Stevie</title>
-		<link rel="icon" type="image/x-icon" href="/images/MrS favicon 3.ico">
+		<link rel="icon" type="image/x-icon" href="/images/MrS Favicon Monster.svg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
