--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						</header>
 						<div class="content">
 							<p><strong>Let's chat! </strong>  Fill in the email form below, or reach out on social media. I'd love to hear about what youre working on, any questions you have about my services, and anything else at all...</p>
-							<form action="https://formspree.io/f/meojrlyw"target="_blank"
+							<form action="https://formspree.io/f/meojrlyw"
   method="POST">
 								<div class="fields">
 									<div class="field half">
