--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section class="intro">
 						<header>
 							<h1>Mr Stevie</h1>
-							<p>Video & Digital Audio Pro<br> <a href="#first">Short/Long-Form&nbsp;Video&nbsp;Editing<br></a> / <a href="#second">Podcast&nbsp;Editing<br> <a href="#contact">Contact</a></p>
+							<p>Video & Digital Audio Pro<br> <a href="#first">Short-Form&nbsp;Video&nbsp;Editing<br> <a href="#second">Podcast&nbsp;Editing<br> <a href="#contact">Contact</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
