--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section class="intro">
 						<header>
 							<h1>Mr Stevie</h1>
-							<p>Video and Digital Audio Pro<br> <a href="#first">Short&nbsp;Form&nbsp;Video&nbsp;Editing<br> <a href="#second">Podcast&nbsp;Editing<br> <a href="https://mrssstevie.gumroad.com/"target="_blank">Max&nbsp;For&nbsp;Live<br> <a href="#contact">Contact</a></p>
+							<p>Video and Digital Audio Pro<br> <a href="#first">Short&nbsp;Form&nbsp;Video&nbsp;Editing<br> <a href="#second">Podcast&nbsp;Editing<br> <a href="https://mrssstevie.gumroad.com/l/fr3q"target="_blank">Max&nbsp;For&nbsp;Live<br> <a href="#contact">Contact</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -41,9 +41,7 @@
 						<div class="content">
 							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creative and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style.<br>After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual conversational, to deeply precise. My strength is in <strong>Audio Editing</strong> but as the industry evolves I have extended my services to include <strong>Video Editing</strong> as well.<br>These two podcast mediums are handled quite differently - When editing an audio podcast I have a lot more freedom to remove every bit of unwanted content, errors etc. Whereas video needs to be edited more subtly, keeping the visual flow of the content as a priority. Editing Video is also more time consuming as there are many more elements at play.<br>Whichever medium you choose, my goal is to provide you with a clean and concise product, while maintaining the integity of your content.<br>My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and fall under a single pricing rate.<br>
 
-							<p><strong>Pricing - $45(aud) per hour</strong><br>Editing 1 hour of raw audio recording typically takes 2 hours of my time. With additional time required for severely bad audio recordings, severe speech errors (stuttering etc) and additional guests (more than two voices).<br>Video-Podcast editing starts at around 3 hours of editing time - per 1 hour of raw video. I can also provide additional short-form clips for social media - <strong>Reels, TikTok, Shorts</strong> etc.<br>Get in touch so we can discuss your project!<br><strong>Note. </strong>If this is beyond your budget, but you feel like we would make a good team; please reach out and let's see what we can work out.
-							<p><a href="#contact"><strong>CONTACT</strong> click here for more info!</a><p>
-							<p><span class="image main"><img src="images/Testimonial James.png" alt="Testimonial James"></span><span class="image main"><img src="images/Testimonial Hannah.png" alt="Testimonial Hannah"></span></p>
+							</p>
 
 						</div>
 					</section>
@@ -51,16 +49,14 @@
 				<!-- Section -->
 					<section id="second">
 						<header>
-							<h2>Sample Packs</h2>
+							<h2>Podcast Editing</h2>
 						</header>
 						<div class="content">
-							<p><strong>For Every Producer</strong> no matter what genre or style you create.<br>After 25 years of beatmaking, sound design, live performance and DJing - I've developed a taste for sounds that just work. You could say timeless. So i've recently started putting together some sample packs. Instant inspiration and endless creative possibilities.<br>There's some free mini-packs as well as larger premium versions.<br>High Quality, Royalty Free and 100% Original.<br>Choose PATREON or GUMROAD below to get the goodness... </p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-tree"><a href="https://mrssstevie.gumroad.com/"target="_blank"><strong>GUMROAD</a></strong>&nbsp;&nbsp;&nbsp;free&nbsp;and&nbsp;premium&nbsp;sample&nbsp;packs</li><div>
-								<li class="icon solid fa-tree"style="margin-top: 30px;"><a href="https://www.patreon.com/MrStevie573"target="_blank"><strong>PATREON</a></strong>&nbsp;&nbsp;&nbsp;sample&nbsp;packs&nbsp;and&nbsp;optional&nbsp;subscription</li>
-								
-							</ul>
-							<p></p>
+							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creative and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style.<br>After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual conversational, to deeply precise. My strength is in <strong>Audio Editing</strong> but as the industry evolves I have extended my services to include <strong>Video Editing</strong> as well.<br>These two podcast mediums are handled quite differently - When editing an audio podcast I have a lot more freedom to remove every bit of unwanted content, errors etc. Whereas video needs to be edited more subtly, keeping the visual flow of the content as a priority. Editing Video is also more time consuming as there are many more elements at play.<br>Whichever medium you choose, my goal is to provide you with a clean and concise product, while maintaining the integity of your content.<br>My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and fall under a single pricing rate.<br>
+
+							<p><strong>Pricing - $45(aud) per hour</strong><br>Editing 1 hour of raw audio recording typically takes 2 hours of my time. With additional time required for severely bad audio recordings, severe speech errors (stuttering etc) and additional guests (more than two voices).<br>Video-Podcast editing starts at around 3 hours of editing time - per 1 hour of raw video. I can also provide additional short-form clips for social media - <strong>Reels, TikTok, Shorts</strong> etc.<br>Get in touch so we can discuss your project!<br><strong>Note. </strong>If this is beyond your budget, but you feel like we would make a good team; please reach out and let's see what we can work out.
+							<p><a href="#contact"><strong>CONTACT</strong> click here for more info!</a><p>
+							<p><span class="image main"><img src="images/Testimonial James.png" alt="Testimonial James"></span><span class="image main"><img src="images/Testimonial Hannah.png" alt="Testimonial Hannah"></span></p></p>
 						</div>
 					</section>
 
