--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Podcast Editing</h2>
+							<h2>Short Form Video Editing</h2>
 						</header>
 						<div class="content">
-							<p><strong>Independent Podcasters require customisable editing services...</strong><br>Leaving you in control of the creative and day to day operation of your podcast, while skipping the harrowing editing process. Each podcast is different, and each requires a different editing style.<br>After editing almost 1000 episodes, i'm able to tailor my editing to suit your style - from casual conversational, to deeply precise. My strength is in <strong>Audio Editing</strong> but as the industry evolves I have extended my services to include <strong>Video Editing</strong> as well.<br>These two podcast mediums are handled quite differently - When editing an audio podcast I have a lot more freedom to remove every bit of unwanted content, errors etc. Whereas video needs to be edited more subtly, keeping the visual flow of the content as a priority. Editing Video is also more time consuming as there are many more elements at play.<br>Whichever medium you choose, my goal is to provide you with a clean and concise product, while maintaining the integity of your content.<br>My standard service includes removing any unwanted content, errors etc / background noise removal / mixing & mastering. All of which are customisable and fall under a single pricing rate.<br>
+							<p><strong>Story telling is a skill...</strong> but telling your story within 20 seconds is another thing altogether.<br>Regardless of your story-telling abilities, we can take your message or idea and transform it into a captivating and compelling short-form-video. Grabbing your audience's attention and driving engagement through comments, likes and follows. Delivering value to your people.<br>With your original content in hand; we take the spiciest moments, the gold - and transform it using high quality complimentary footage, and the magic of music. Whether you want a chill, soft aesthetic - A seriously thought-provoking moment - Or all the drama... We're here to set the mood with intelligent content, music and editing decisions.<br>
+							<p><strong>Pricing - starting from $50(aud) per Video 15-30sec</strong><br> 
 
 							</p>
 
