--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							<h2>Short Form Video Editing</h2>
 						</header>
 						<div class="content">
-							<p><strong>Story telling is a skill...</strong> but telling your story within 20 seconds is another thing altogether.<br>Regardless of your story-telling abilities, we can take your message or idea and transform it into a captivating and compelling short-form-video. Grabbing your audience's attention and driving engagement through comments, likes and follows. Delivering value to your people.<br>With your original content in hand; we take the spiciest moments, the gold - and transform it using high quality complimentary footage, and the magic of music. Whether you want a chill, soft aesthetic - A seriously thought-provoking moment - Or all the drama... We're here to set the mood with intelligent content, music and editing decisions.<br>
-							<p><strong>Pricing - starting from $50(aud) per Video 15-30sec</strong><br> 
+							<p><strong>Story telling is a skill...</strong> but telling your story within 20 seconds is another thing altogether.<br>Regardless of your story-telling abilities, we can take your message or idea and transform it into a captivating and compelling short-form-video. Grabbing your audience's attention and driving engagement through comments, likes and follows. Delivering value to your people.<br>With your original content in hand; we take the spiciest moments, the gold - and transform them using high quality complimentary footage, and the perfect music selection. Whether you want a chill, vibey, soft aesthetic - A seriously thought-provoking moment - Or ALL THE DRAMA... We're here to set the mood with intelligent content, music and editing decisions.<br>
+							<p><strong>Pricing - starting from $50(aud) per Video 15-30sec</strong>For Instagram, TikTok & Youtube<br> 
 
 							</p>
 
