--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section class="intro">
 						<header>
 							<h1>Mr Stevie</h1>
-							<p>Video and Digital Audio Pro<br> <a href="#first">Short&nbsp;Form&nbsp;Video&nbsp;Editing<br> <a href="#second">Podcast&nbsp;Editing<br> <a href="https://mrssstevie.gumroad.com/l/fr3q"target="_blank">Max&nbsp;For&nbsp;Live<br> <a href="#contact">Contact</a></p>
+							<p>Video and Digital Audio Pro<br> <a href="#first">Short&nbsp;Form&nbsp;Video&nbsp;Editing<br> <a href="#second">Podcast&nbsp;Editing<br> <a href="https://mrssstevie.gumroad.com/?section=MG1TPBWiLao2CLfGxQshYw%3D%3D"target="_blank">Max&nbsp;For&nbsp;Live<br> <a href="#contact">Contact</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
